--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <img src="./images/profile.png" class = "img-circle" alt="Pedro Sampaio">
         <h1>Pedro Fróis</h1>
         <p>
-          Developer for the Brazilian Federal Government
+          Developer for the Brazilian Federal Government.
         </p>
         <!-- <a href="#">Discover Le Wagon</a> -->
       </div>
@@ -23,13 +23,6 @@
         <li>
           <a href="https://github.com/pedrohfs31" target="_blank">
             <i class="fab fa-github-square"></i>
-          </a>
-        </li>
-        <li>
-          <a href="https://instagram.com/pedro.froissampaio?igshid=1s0t0isl840pl" target="_blank">
-            <!-- <i class="fab fa-instagram-square"></i> -->
-            <!-- <i class="fab fa-linkedin-in"></i> -->
-            <i class="fab fa-instagram"></i>
           </a>
         </li>
       </ul>
