--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <img src="./images/profile.png" class = "img-circle" alt="Pedro Sampaio">
         <h1>Pedro Fróis</h1>
         <p>
-          Developer for the Brazilian Federal Government.
+          Developer for the Brazilian Federal Government
         </p>
         <!-- <a href="#">Discover Le Wagon</a> -->
       </div>
